--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,16 +1,3 @@
-<p-table [columns]="cols" [value]="usuarios" [tableStyle]="{ 'min-width': '50rem' }">
-    <ng-template pTemplate="header" let-columns>
-        <tr>
-            <th *ngFor="let col of columns">
-                {{ col.header }}
-            </th>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-rowData let-columns="columns">
-        <tr>
-            <td *ngFor="let col of columns">
-                {{ rowData[col.field] }}
-            </td>
-        </tr>
-    </ng-template>
-</p-table>
+<div class="centered">
+    <app-login></app-login>
+</div>
