--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,3 +1,10 @@
 @import "~primeng/resources/primeng.min.css";
 @import "~primeng/resources/themes/saga-blue/theme.css";
 @import "~primeicons/primeicons.css";
+
+.centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
