Add: refatoração backend DDD, novo layout, responsividade no login

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,8 @@
-<div class="centered">
+<!-- Usuários não logados -->
+<p-toast position="top-center"></p-toast>
+<div *ngIf="!(contaService.currentUser$ | async)" class="centered">
     <app-login></app-login>
 </div>
+
+<!-- Usuários logados -->
+<app-menu-lateral *ngIf="(contaService.currentUser$ | async)"></app-menu-lateral>
