--- a/client/src/app/components/login/login.component.scss
+++ b/client/src/app/components/login/login.component.scss
@@ -54,6 +54,11 @@
     &:hover {
         background-color: darken($main-color, 10%);
     }
+
+    &:disabled {
+        background-color: lighten($main-color, 30%);
+        cursor: not-allowed;
+    }
 }
 
 .container button.hidden {
@@ -198,23 +203,6 @@
     transform: translateX(200%);
 }
 
-::ng-deep .p-inputtext {
-    background-color: #eee;
-    border: none;
-    margin: 8px 0;
-    padding: 10px 15px;
-    font-size: 13px;
-    border-radius: 8px;
-    width: 100%;
-    box-sizing: border-box;
-    outline: none;
-    min-width: 300px;
-
-    @media (max-width: 600px) {
-        min-width: 170px;
-    }
-}
-
 .input-container {
     display: flex;
     flex-direction: column;
@@ -235,5 +223,98 @@
 }
 
 .text-ok {
-    color: $main-color;
+    color: #333;
+}
+
+.icon-ok {
+    display: inline !important;
+    color: #008000;
+    font-weight: 700;
+}
+
+// Responsivo
+::ng-deep .p-inputtext {
+    background-color: #eee;
+    border: none;
+    margin: 8px 0;
+    padding: 10px 15px;
+    font-size: 13px;
+    border-radius: 8px;
+    width: 100%;
+    box-sizing: border-box;
+    outline: none;
+    min-width: 300px;
+
+    @media (max-width: 600px) {
+        min-width: 320px;
+    }
+}
+
+.registrar-responsivo {
+    display: none;
+}
+
+.logar-responsivo {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .toggle-container {
+        display: none;
+    }
+
+    .container {
+        background-color: #fff;
+        border-radius: 30px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+        position: relative;
+        overflow: hidden;
+        width: 400px;
+        max-width: 100%;
+        min-height: 480px;
+    }
+
+    .sign-in {
+        width: 100%;
+    }
+
+    .sign-up {
+        position: absolute;
+        top: 0%;
+        left: -25%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        z-index: 1;
+    }
+
+    .container.active .sign-up {
+        opacity: 1;
+        z-index: 5;
+    }
+
+    .registrar-responsivo {
+        display: inline-block;
+        margin-top: 10px !important;
+        width: 300px !important;
+
+        &:hover {
+            color: $main-color;
+        }
+    }
+
+    .logar-responsivo {
+        display: inline-block;
+        margin-top: 20px !important;
+        width: 250px !important;
+    }
+
+    .small-container {
+        display: none;
+    }
+
+    small {
+        display: inline-block !important;
+        margin-top: 5px !important;
+        width: 250px !important;
+    }
 }
